# demo-game

./: .env.example  .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
assets/textures/npc_characters/: female_2.trickfilm
assets/textures/spells/: ice_vfx_1.trickfilm
crates/demo-framework/: Cargo.toml
crates/demo-framework/src/: camera.rs  debug.rs  lib.rs  loading.rs  menu.rs  player.rs  ui.rs  world.rs  world_gen.rs
crates/demo-framework/src/player/: animation.rs  attack.rs  input.rs  movement.rs  state.rs
crates/demo-framework/src/ui/: diagnostics.rs  hud.rs  menu.rs
crates/demo-framework/src/world/: camera.rs  chunk.rs  helpers.rs  tile.rs
crates/demo-game/: Cargo.toml  build.rs
crates/demo-game/src/: lib.rs  version.rs
crates/discord/: Cargo.toml
crates/discord/src/: lib.rs  state.rs
credits/: CREDITS.md
credits/licenses/: Szadi_Art_License.txt
src/: lib.rs  main.rs
