[package]
name = "demo-game"
version = "0.1.0"
authors = ["Zachary Meyer <zmeyer1@protonmail.com>"]
edition = "2021"
exclude = ["assets", "build", "credits", "docs"]

[workspace]
members = ["crates/*"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
dev = ["bevy/dynamic_linking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
] }
image = { version = "0.24", default-features = false }
winit = { version = "0.29", default-features = false }

[build-dependencies]
embed-resource = "2.4.1"