[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.76.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Zachary Meyer <zmeyer1@protonmail.com>"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
incremental = true

[workspace.dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
] }
image = { version = "0.24", default-features = false }
winit = { version = "0.29", default-features = false }
