[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.77.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Zachary Meyer <zmeyer1@protonmail.com>"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
incremental = true
codegen-units = 1

[workspace.dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "ktx2",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch="main", features = ["serde", "atlas"] }
bevy_rapier2d = { version = "0.25.0", features = ["debug-render-2d"] }

serde = { version = "1.0.197", features = ["derive"] }
image = { version = "0.24.0", default-features = false }
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
