[package]
name = "demo-framework"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_asset_loader = { version = "0.20.0", features = ["2d", "progress_tracking"] }
iyes_progress = "0.11.0"