[package]
name = "demo-framework"
version = "0.0.0"
edition = "2021"
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_ecs_tilemap.workspace = true
bevy_rapier2d.workspace = true
bevy_trickfilm.workspace = true
bevy_magic_light_2d.workspace = true
serde.workspace = true

bevy_asset_loader = { version = "0.20.0", features = ["2d", "progress_tracking"] }
bevy-inspector-egui = "0.23.4"
iyes_progress = "0.11.0"
noise = "0.9.0"
