[package]
name = "demo-game"
version = "0.0.0"
homepage = "https://github.com/saikou-studios/demo-game"
description = "A demo game built in rust using the Bevy game engine"
autobins = false
exclude = ["build"]
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "demo-game"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_ecs_tilemap.workspace = true
bevy_rapier2d.workspace = true
bevy_trickfilm.workspace = true
winit.workspace = true
image.workspace = true

dotenvy = "0.15.7"

# workspace dependencies
demo-framework = { path = "../demo-framework" }
discord = { path = "../discord" }

[build-dependencies]
embed-resource = "2.4.2"
